Revert "Add spacing on emoji to avoid using flex"
This reverts commit fd4c6bb367d3e7f06397fea7b4aa796578a76037.

--- a/app/assets/stylesheets/common/base/topic.scss
+++ b/app/assets/stylesheets/common/base/topic.scss
@@ -413,7 +413,6 @@
       .emoji {
         width: 1em;
         height: 1em;
-        margin-inline: var(--space-1);
       }
     }
   }
